samples/_failures_safe/1761170658_e2abae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5974eaee.c: In function ‘parser_init’:
./samples/SAFE/__tmp_5974eaee.c:152:5: error: expected declaration or statement at end of input
  152 |     parser->has_error = 0;
      |     ^~~~~~
